--- a/src/a/Menu.form
+++ b/src/a/Menu.form
@@ -8,6 +8,9 @@
         <Property name="title" type="java.lang.String" value="Tambah Menu"/>
         <Property name="modal" type="boolean" value="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="componentShown" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="jDialog3ComponentShown"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -357,7 +360,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <Events>
     <EventHandler event="componentShown" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="formComponentShown"/>
