--- a/src/a/pesanan.form
+++ b/src/a/pesanan.form
@@ -119,7 +119,7 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="3" rowCount="0">
                     <Column editable="false" title="No Antrian" type="java.lang.Object"/>
-                    <Column editable="false" title="ID Bayar" type="java.lang.Object"/>
+                    <Column editable="false" title="Pembayaran" type="java.lang.Object"/>
                     <Column editable="false" title="Status" type="java.lang.Object"/>
                   </Table>
                 </Property>
